apps/base/radicale/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radicale
  namespace: radicale

spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`calendar.akop.ro`)
      services:
        - kind: Service
          name: radicale
          namespace: radicale
          passHostHeader: true
          port: 80
