apps/base/radicale/routes.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radicale-route
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/hostname: calendar.akop.ro
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`calendar.akop.ro`)
      services:
        - kind: Service
          name: radicale
          namespace: radicale
          port: 5232
  tls:
    secretName: wildcard-certificate-secret
